# gitNL

./: .gitignore  LICENSE  MANIFEST.in  PYPI.md  README.md  features.md  main.py  pyproject.toml
git_nl/: __init__.py  __main__.py  cli.py  config.py
git_nl/definitions/: __init__.py  entity_extractor.py  llm.py  router.py  rule_definitions.py  semantic.py  types.py
git_nl/executor/: __init__.py  executor.py
git_nl/intent/: __init__.py  router.py  rule_based.py
git_nl/planner/: __init__.py  planner.py  rule_plans.py
git_nl/verifier/: __init__.py  verifier.py
tests/: test_entity_extractor.py  test_router_multi_intent.py
